<resources>
    <string name="app_name">RTHelper</string>
    <string name="state">State:</string>
    <string name="negative">Negative</string>
    <string name="positive">Positive</string>
    <string name="death">Death</string>
    <string name="max">Max</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mean_arterial_pressure">Mean Arterial Pressure Calculator</string>
    <string name="the_definition_of_mean_arterial_pressure_map_is_the_average_arterial_pressure_throughout_one_cardiac_cycle_systole_and_diastole_map_is_influenced_by_cardiac_output_and_systemic_vascular_resistance_each_of_which_is_under_the_influence_of_several_variables">The definition of mean arterial pressure (MAP) is the average arterial pressure throughout one cardiac cycle, systole, and diastole. MAP is influenced by cardiac output and systemic vascular resistance, each of which is under the influence of several variables.</string>
    <string name="to_calculate_mean_arterial_pressure_please_provide_the_following">To calculate Mean Arterial Pressure, please provide the following:</string>
    <string name="systolic_pressure">Systolic Pressure</string>
    <string name="diastolic_pressure">Diastolic Pressure</string>
    <string name="calculate">Calculate</string>
    <string name="recalculate">Recalculate</string>
    <string name="low">Low</string>
    <string name="high">High</string>
    <string name="normal">Normal</string>
</resources>