<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".MAPFragment">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/mean_arterial_pressure"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInformation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/the_definition_of_mean_arterial_pressure_map_is_the_average_arterial_pressure_throughout_one_cardiac_cycle_systole_and_diastole_map_is_influenced_by_cardiac_output_and_systemic_vascular_resistance_each_of_which_is_under_the_influence_of_several_variables"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <TextView
        android:id="@+id/tvInstruction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/to_calculate_mean_arterial_pressure_please_provide_the_following"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInformation" />

    <TextView
        android:id="@+id/tvSystolic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/systolic_pressure"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvDiastolic"
        app:layout_constraintEnd_toStartOf="@+id/tvDiastolic"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etSystolic"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="Systolic"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@+id/tvSystolic"
        app:layout_constraintStart_toStartOf="@+id/tvSystolic"
        app:layout_constraintTop_toBottomOf="@+id/tvSystolic" />

    <TextView
        android:id="@+id/tvDiastolic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/diastolic_pressure"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvSystolic"
        app:layout_constraintTop_toBottomOf="@+id/tvInstruction" />

    <EditText
        android:id="@+id/etDiastolic"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="Diastolic"
        app:layout_constraintEnd_toEndOf="@+id/tvDiastolic"
        app:layout_constraintStart_toStartOf="@+id/tvDiastolic"
        app:layout_constraintTop_toBottomOf="@+id/tvDiastolic" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvNumResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/etSystolic"
        app:layout_constraintEnd_toEndOf="@+id/etSystolic"
        app:layout_constraintStart_toStartOf="@+id/etSystolic"
        app:layout_constraintTop_toTopOf="@+id/tvSystolic" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/etDiastolic"
        app:layout_constraintEnd_toEndOf="@+id/etDiastolic"
        app:layout_constraintStart_toStartOf="@+id/etDiastolic"
        app:layout_constraintTop_toTopOf="@+id/tvDiastolic" />

    <TextView
        android:id="@+id/tvRange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Normal Range: 80 - 100 mmHg."
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/tvInstruction"
        app:layout_constraintEnd_toEndOf="@+id/tvInstruction"
        app:layout_constraintStart_toStartOf="@+id/tvInstruction"
        app:layout_constraintTop_toTopOf="@+id/tvInstruction" />

    <Button
        android:id="@+id/btnRecalculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recalculate"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/btnCalculate"
        app:layout_constraintEnd_toEndOf="@+id/btnCalculate"
        app:layout_constraintStart_toStartOf="@+id/btnCalculate"
        app:layout_constraintTop_toTopOf="@+id/btnCalculate" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/resultGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="tvNumResult, tvResult, tvRange, btnRecalculate" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/mainGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="tvSystolic, etSystolic, tvDiastolic, etDiastolic, tvInstruction, btnCalculate" />

</androidx.constraintlayout.widget.ConstraintLayout>